ingress/oauth2-proxy-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: oauth2-proxy-ingress
  namespace: oauth2-proxy
spec:
  ingressClassName: traefik
  rules:
    - host: oauth2.ggdevs.site
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: oauth2-proxy
                port:
                  number: 4180
